Improved all code